--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,13 +1,28 @@
 @charset "UTF-8";
+@use "abstracts/variables" as vars;
 
 //1. Themes
 
 //2. Vendors
 
 //3. Base
+@use 'base/base';
+@use 'base/typography';
+@use 'base/helpers';
 
 //4. Layout
+@use 'layout/header';
+@use 'layout/menu';
+@use 'layout/main';
 
 //5. Components
+@use 'components/banner';
+@use 'components/logo';
+@use 'components/field';
+@use 'components/link';
+@use 'components/button';
+@use 'components/flash-message';
 
 //6. Page-Specific
+@use 'pages/authPages';
+@use 'pages/dashboardPage';
