--- a/resources/sass/components/_field.scss
+++ b/resources/sass/components/_field.scss
@@ -22,6 +22,23 @@
         &:focus {
             outline: 3px solid vars.$highlight-color;
         }
+
+        &[type=file] {
+            border: none;
+        }
+    }
+
+    textarea {
+        width: 100%;
+        border-radius: vars.$border-radius;
+        border: 1px solid vars.$gray;
+        resize: none;
+        padding: 0.5rem 1rem;
+
+
+        &:focus {
+            outline: 3px solid vars.$highlight-color;
+        }
     }
 }
 
