--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -32,6 +32,7 @@ $success-color: map.get($map: $colors, $key: green);
 $error-color: map.get($map: $colors, $key: red);
 
 $menu-background-color: map.get($map: $colors, $key: transparantwhite2);
+$choice-background-color: map.get($map: $colors, $key: transparantwhite2);
 $shadow-color: map.get($map: $colors, $key: transparantblack);
 $background-color: map.get($map: $colors, $key: white2);
 $header-color: map.get($map: $colors, $key: black2);
