--- a/resources/sass/base/_helpers.scss
+++ b/resources/sass/base/_helpers.scss
@@ -11,3 +11,5 @@
  .text-center { text-align: center; };
  .text-left { text-align: left; };
  .text-right { text-align: right; };
+
+ .italic { font-style: italic; }
