--- a/resources/sass/layout/_menu.scss
+++ b/resources/sass/layout/_menu.scss
@@ -8,6 +8,7 @@
     position: fixed;
     z-index: 99;
     width: 100%;
+    height: 100vh;
     background-color: vars.$menu-background-color;
     top: 0;
 }
