--- a/resources/sass/components/_product-card.scss
+++ b/resources/sass/components/_product-card.scss
@@ -23,14 +23,25 @@
         }
 
         .description {
+            position: relative;
 
             h2 {
-                margin-top: 1rem;
+                margin: 1rem 0;
                 color: vars.$highlight-color;
             }
 
             h5 {
                 color: vars.$gray;
+            }
+
+            small {
+                position: absolute;
+                right: 1rem;
+                bottom: 0;
+
+                .fa-circle-check {
+                    color: vars.$success-color;
+                }
             }
         }
     }
