--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -38,7 +38,7 @@ header {
         }
     }
 
-    .fa-pen-to-square {
+    .fa-pen-to-square,.fa-cart-shopping,.fa-list {
         position: absolute;
         right: 0.5rem;
         top: 0.5rem;
