--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -43,7 +43,7 @@ header {
         right: 0.5rem;
         top: 0.5rem;
         cursor: pointer;
-        color: vars.$highlight-color;
+        color: vars.$black;
 
         &:hover {
             transform: scale(1.2);
