--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -26,6 +26,7 @@
 @use 'components/product-detail';
 @use 'components/list-card';
 @use 'components/choice_box';
+@use 'components/filter';
 
 //6. Page-Specific
 @use 'pages/authPages';
